# Hade-Website-Hostinger

./: .gitignore  app.py  pyproject.toml  requirements.txt  vercel.json
static/css/: main.css
templates/: index.html
