[tool.poetry]
name = "hade - website hostinger"
version = "0.1.0"
description = ""
authors = ["munsihkhatri720 <munishkhatri720@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
